# curious-frame

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  setup.sh
assets/: illustrations.odt
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
ollama/: Dockerfile  README.md
piper_server/: Dockerfile  README.md  http_server.py
scripts/: curious_frame.service
src/curious_frame/: __init__.py  __main__.py  audio.py  camera.py  language.py  main.py  vision.py
tests/: __init__.py  test_camera.py
