[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "curious_frame"
version = "0.0.1"
authors = [
  { name="Jetorin", email="jetorin@example.com" },
]
description = "A cool tutor for kids for the Gemma3n Impact Challenge"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "accelerate",
    "opencv-python",
    "optimum-quanto",
    "requests",
    "torch",
    "torchvision",
    "transformers",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[project.scripts]
curious_frame = "curious_frame.main:main"

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
