[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "curious_frame"
version = "0.1.0"
authors = [
  { name="Frédéric Collonval", email="frederic.collonval@webscit.com" },
]
description = "A cool tutor for kids for the Gemma3n Impact Challenge"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "accelerate",
    "opencv-python",
    "optimum-quanto",
    "requests",
    "torch",
    "torchvision",
    "transformers",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
"Homepage" = "https://github.com/webscit/curious-frame"
"Bug Tracker" = "https://github.com/webscit/curious-frame/issues"

[project.scripts]
curious_frame = "curious_frame.main:main"

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
